test/inputs/expr/bad/unescaped-right-bracket.miros
I forgot to type the ⟩
